<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="90dp"
        android:text="@string/main" android:gravity="center"/>

    <Spinner
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:id="@+id/SpinnerNewChoice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/selectNewPrompt"
        />
    
    <Button
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:id="@+id/ButtonAddNew"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/newBeverage" 
        android:onClick="recordValue"
        />

    <Button
        android:layout_marginTop="70dp"
        android:id="@+id/ButtonViewCount"
        android:layout_width="255dp"
        android:layout_height="40dp"
        android:onClick="viewCount"
        android:text="@string/viewAll" 
        android:layout_gravity="center"/>
    
    <Button
        android:id="@+id/ButtonViewMenu"
        android:layout_width="255dp"
        android:layout_height="40dp"
        android:onClick="viewMenu"
        android:text="@string/viewMenu" 
        android:layout_gravity="center"/>
    

</LinearLayout>